2004-01-19  Scott Goodwin  <scott@scottg.net>

      * nsopenssl.h, nsopenssl.c, ssl.c: Removed rest of BIO stuff in lieu of
      straight SSL calls. Cleaned up NsOpenSSLConnHandshake().

2004-01-17  Scott Goodwin  <scott@scottg.net>

      * nsopenssl.h, ssl.c, tclcmds.c: Ripped out use of BIOs in
      NsOpenSSLConnSend and NsOpenSSLConnRecv and replaced them with straight
      SSL methods.

2004-01-16  Scott Goodwin  <scott@scottg.net>

      * ssl.c, nsopenssl.h: Merged NsOpenSSLConnConnect and
      NsOpenSSLConnAccept into a single NsOpenSSLConnHandshake function. Also
      converted the function to use SSL_* calls directly instead of using
      OpenSSL's BIO abstraction. Subjectively, the handshake does appear to be
      quicker.

2004-01-08  Scott Goodwin  <scott@scottg.net>

      * ssl.c: Fixed bug in Recv and Send procs so that larger files could be
      downloaded and uploaded. 

2003-12-27  Scott Goodwin  <scott@scottg.net>

      * nsopenssl.c, nsopenssl.h: Added changes from Jamie Rasmussen for
      Windows build.

2003-12-24  Scott Goodwin  <scott@scottg.net>

      * all: Lots of cleanup, initializing function variables.

      * sslcontext.c, nsopenssl.c, nsopenssl.h: Added names to mutexes. Added
      MODULE_SHORT to nsopenssl.h as the mutex name length is limited.

2003-12-13  Scott Goodwin  <scott@scottg.net>

      * ssl.c: Changed NsOpenSSLConnSend to use BIO_write instead of
      SSL_write. It's crucial that we call BIO_flush after every write or this
      won't work.

2003-11-24  Scott Goodwin  <scott@scottg.net>

      * ssl.c, nsopenssl.c, tclcmds.c: Fixed problem with SSL conn reference
      counting; conns are now free'd properly when NsOpenSSLDestroy is called
      and the conn's reference count is 0. Tagged v3_0_beta_2.

2003-11-22  Scott Goodwin  <scott@scottg.net>

      * all: Stopped passing *module to all functions; nsopenssl must now be
      called nsopenssl in the config file and nothing else. Merged sslconn.c